[+] Criando padrão MVC

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "athoms_br",
   "version": "1.0.0",
   "description": "API que facilita para coleta de propriedades de átomos",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node ./bin/server.js"
   },
   "keywords": [
-    "átomos", "tabela periódica", "química"
+    "átomos",
+    "tabela periódica",
+    "química"
   ],
   "author": {
     "name": "Pierre Vieira",
@@ -15,7 +17,12 @@
     "github": "https://github.com/PierreVieira"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "debug": "^4.1.1",
-      "express": "^4.17.1"
+    "express": "^4.17.1",
+    "http": "0.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
