--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "athoms_br",
+  "name": "atoms_br",
   "version": "1.0.0",
   "description": "API que facilita para coleta de propriedades de átomos",
   "main": "server.js",
@@ -20,7 +20,6 @@
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "http": "0.0.0",
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
