--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "dependencies": {
     "debug": "^4.1.1",
-    "express": "^4.17.1",
-    "restify": "^8.5.1"
+    "express": "^4.17.1"
   }
 }
